--- a/cliente.html
+++ b/cliente.html
@@ -17,8 +17,8 @@
   </div>
 
   <div id="query-section" class="hidden">
-    <h2 id="welcome-label"></h2>  <!--Este es el label donde una vez nos logeamos bien, mostraremos el Welcome {username}-->
-    <form id="query-form">
+    <h2 id="welcome-label" class="welcome-box"></h2>  <!--Este es el label donde una vez nos logeamos bien, mostraremos el Welcome {username}-->
+    <form id="query-form" class="escribe-tu-query">
       <input type="text" id="user-query" placeholder="Please, write your query" required>
       <button id="query-button" type="button">Submit Query</button>
       <button id="logout-button" type="button">Log Out</button>
